# rier-sprite

./: Cargo.toml  LICENSE  README.md
examples/: sprite.rs
src/: graphics.rs  object.rs  sprite.frag  sprite.vert
