[package]

name = "rier-sprite"
version = "0.0.1"
authors = ["tioover <tioover@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tioover/rier-sprite.git"
description = "A sprite support library for rier."


[lib]
name = "rier_sprite"
path = "src/lib.rs"

[dependencies]
glium = "*"
[dependencies.rier]
git = "https://github.com/tioover/rier.git"
